--- a/README
+++ b/README
@@ -10,11 +10,11 @@ In order to build sselp you need the Xlib header files.
 
 Installation
 ------------
-Edit config.mk to match your local setup (swarp is installed into
+Edit config.mk to match your local setup (sselp is installed into
 the /usr/local namespace by default).
 
-Afterwards enter the following command to build and install swarp (if
-necessary as root):
+Afterwards enter the following command to build and install sselp
+(if necessary as root):
 
     make clean install
 
